Se agrega controlador de odontograma
